src/components/components page/ComponentsPage.css
.MainContainer {
  background-color: white;
  /* width: 100%;
  height: 400vh; */
}
.IconStyle {
  color: #9630fc;
  background-color: #1d1c1c !important;
  font-size: 51px !important;
  margin-top: 4px;
}
#basic-addon1 {
  background-color: #1d1c1c !important;
  border: none !important;
  box-shadow: 4px 8px 8px 0 rgba(0, 0, 0, 0.2),
    4px 8px 30px 10px rgba(63, 60, 65, 0.19) !important;
}
.search {
  padding: 10px;
  margin-left: 600px;
  width: 440px;
  font-size: 20px;
  background-color: rgb(33, 31, 34);
  color: white;
  border-right: none;
}
.mb-4 {
  width: 35%;
  padding: 10px;
  margin-left: 900px;
  /* float: right; */
  margin-bottom: 150px;
  margin-top: -70px;
  width: 440px;
  
}
.SearchBarnew {
  background-color: #1d1c1c !important;
  color: #ebe5f1 !important;
  border: none !important;
  box-shadow: 4px 8px 8px 0 rgba(0, 0, 0, 0.2),
    4px 8px 30px 10px rgba(63, 60, 65, 0.19) !important;
}
.MuiSlider-track{

  height: 4px !important;
}
.PrivateValueLabel-label-10{
  font-size: 15px;
  margin-bottom: 50px;
  margin-left: 44px;
}
.priceRangeText {
  color: #efe7f8;
  text-align: center;
  font-size: 20px !important;
}
.sliderText {
margin-top: 30px;
  font-weight: bold;
  border: 4px !important;
  color: #892be7 !important;
  width: 250px !important;
  height: 10px !important;
}
.filterBox {
  width: 30vh;
  padding-bottom: 40px;
}

.filterBox2 {
  width: 30vh;
  padding-bottom: 10px;
  margin-top: -50px;
  height: 10px;
  background-color: #0a0a0a;
}
.hrline {
  width: 30%;
  margin-left: 800px;
  align-self: center;
  color: #0a0a0a;
  border: 3px solid;
}

.mainTitle {
  color: #3b3b3f;
  font-weight: 500;
  margin-left: 330px;
  font-size: 35px;
  margin-top: 20px !important;
  border-bottom: 5px solid #5f5f5f;
  border-radius: 7px;
  padding: 12px;
  margin-bottom: 30px;
  /* background-color: #8A15FC; */
  height: 10vh;
  margin-top: 20px;
}
.peripheral-container {
  display: flex;
  margin-top: -230px;
  width: 100%;
  height: 100%;
}
.left-container {
  width: 410px;
  display: flex;
  flex-direction: column;
  background-color: #1b1b1b;
  padding-top: 100px;
  margin-top: 26px;
  float: left;
  box-shadow: 4px 8px 8px 0 rgba(0, 0, 0, 0.2),
    4px 8px 30px 10px rgba(63, 60, 65, 0.19) !important;
}
.left-btn {
  width: 200px;
  margin-top: 1.6rem;
  margin-bottom: 1rem;
  font-family: Roboto, sans-serif;
  /* background-color: rgb(58, 58, 50); */
  background: none;
  border: none;
  font-weight: 400;
  font-size: 18px;
  border-bottom: 2px solid #535353;
  height: 30px;
  float: left;
  text-align: left;
  color: rgb(255, 255, 255);
  letter-spacing: 2px;
}

.left-btn:hover {
  background-color: #8a15fc;
  padding-left: 20px;
  border-radius: 12px;
  transition: 0.5s;
  color: #ebdbfd;
}

.right-container {
  margin-left: 20px;
  margin-top: 200px;
  width: 100%;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  position: relative;
  height: 100%;
  font-size: 14px;
}

.paginationUP {
  background-color: #fff;
  background: none;
  margin-top: -30px;
  justify-content: center;
  margin-left: 140px;
}
.pagination {
  background-color: #fff;
  background: none;
  margin-top: 30px;
  justify-content: center;
}

.paginationText {
  font-size: 18px;
  width: 100%;
  margin-top: -55px;
}
.paginationTextUP {
  font-size: 18px;
  width: 80%;
  margin-top: -52px;
  margin-left: 340px;
}

